--- a/home_page.html
+++ b/home_page.html
@@ -560,8 +560,8 @@
        
       <div class="alphabet-content">
         <a href="#" id="alphabet-content_van-char">0-9</a>
-         <a href="#">A</a>
-         <a href="#">B</a>
+         <a href="http://127.0.0.1:5500/special-offers.html#A">A</a>
+         <a href="http://127.0.0.1:5500/special-offers.html#B">B</a>
          <a href="#">C</a>
          <a href="#">D</a>
          <a href="#">E</a>
