--- a/blog-article-2.html
+++ b/blog-article-2.html
@@ -203,8 +203,8 @@
         <div class="wrapper">
             <div class="catalog-top">
                 <ul class="breadcrumbs">
-                    <!--<li><a href="https://tobecoupon.com">Homepage</a></li>-->
-                    <li><a href="https://tobecoupon.com/catalog">Homepage <span>/ </span>Blog <span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></a></li>
+                    <li><a href="https://tobecoupon.com">Homepage</a></li>
+                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Blog <span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></a></li>
                 </ul>
             </div>
             <div class="catalog-row">
@@ -337,11 +337,13 @@
                             <div class="banner-cyber-monday__content">
                                 <p class="banner-cyber-monday__text">Cyber Monday</p>
                                <!-- <div style="display: flex; width: 100%; height: calc(100% - 59px);"> -->
+                                <a href="#">
                                 <div class="banner-cyber-monday__btn"><p>Visit website</p></div> 
                                <!-- </div> -->
-                            </div>
+                               </div>
+                               </a>
                             <img class="banner-cyber-monday__img" style="z-index: 0; grid-column: 1/2;
-                            grid-row: 1/2;" src="img/cyber-monday.svg">
+                            grid-row: 1/2;" src="img/cyber-monday.png">
                             <img class="banner-cyber-monday__img-mob" style="z-index: 0; grid-column: 1/2;
                             grid-row: 1/2;" src="img/cyber-monday-min.svg">
                         </div>
