--- a/blog_article.html
+++ b/blog_article.html
@@ -203,8 +203,8 @@
         <div class="wrapper">
             <div class="catalog-top">
                 <ul class="breadcrumbs">
-                    <!--<li><a href="https://tobecoupon.com">Homepage</a></li>-->
-                    <li><a href="https://tobecoupon.com/catalog">Homepage <span>/ </span>Blog <span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></a></li>
+                    <li><a href="https://tobecoupon.com">Homepage</a></li>
+                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Blog <span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></a></li>
                 </ul>
             </div>
             <div class="catalog-row">
