--- a/special-offers.html
+++ b/special-offers.html
@@ -222,7 +222,7 @@
       </div>
     </header>
 
-    <section class="special-offers-page">
+    <section id="special-offers-page" class="special-offers-page">
 
         <ul class="breadcrumbs">
             <li><a href="https://tobecoupon.com">Homepage <span>/ Cyber Monday</span></a></li>
