--- a/404.html
+++ b/404.html
@@ -200,7 +200,7 @@
         <div class="wrapper">
             <div class="notFaund-catalog-top">
                 <ul class="breadcrumbs">
-                    <li><a href="https://tobecoupon.com">Homepage <span>/ 404</span></a></li>
+                    <li><a href="https://tobecoupon.com">Homepage </a><span>/ 404</span></li>
                                     </ul>
             </div>
             <div class="notFound">
