--- a/blog-article-2.html
+++ b/blog-article-2.html
@@ -204,7 +204,7 @@
             <div class="catalog-top">
                 <ul class="breadcrumbs">
                     <li><a href="https://tobecoupon.com">Homepage</a></li>
-                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Blog <span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></a></li>
+                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Blog </a><span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></li>
                 </ul>
             </div>
             <div class="catalog-row">
@@ -834,7 +834,8 @@
 
 
 <div class="modal-overlay"></div>
-    
+
+<script src="js/slider.js"></script> <!-- Добавил -->
 <script src="js/main.js"></script> <!-- Добавил -->
 
 <script src="https://tobecoupon.com/js/scripts.min.js"></script>
