--- a/blog.html
+++ b/blog.html
@@ -203,7 +203,7 @@
         <div class="wrapper">
             <div class="catalog-top marg-padd-null">
                 <ul class="breadcrumbs marg-padd-null">
-                    <li><a href="https://tobecoupon.com">Homepage <span>/ Blog</span></a></li>
+                    <li><a href="https://tobecoupon.com">Homepage </a><span>/ Blog</span></li>
                                    </ul>
             </div>
         </div>
