--- a/blog_article.html
+++ b/blog_article.html
@@ -204,7 +204,7 @@
             <div class="catalog-top">
                 <ul class="breadcrumbs">
                     <li><a href="https://tobecoupon.com">Homepage</a></li>
-                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Blog <span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></a></li>
+                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Blog </a><span>/ Astragalus iHerb: A Potent Natural Ally for Optimal Health</span></li>
                 </ul>
             </div>
             <div class="catalog-row">
