--- a/faq.html
+++ b/faq.html
@@ -225,7 +225,7 @@
     <section id="catalog_faq" class="catalog faq">
       <div class="wrapper">
         <ul class="breadcrumbs">
-          <li><a href="https://tobecoupon.com">Homepage <span>/ FAQ</span></a></li>
+          <li><a href="https://tobecoupon.com">Homepage </a><span>/ FAQ</span></li>
           <!--<li>FAQ</li>-->
         </ul>
         <h1 class="page-title">FAQ:</h1>
