--- a/special-offers.html
+++ b/special-offers.html
@@ -225,7 +225,7 @@
     <section id="special-offers-page" class="special-offers-page">
 
         <ul class="breadcrumbs">
-            <li><a href="https://tobecoupon.com">Homepage <span>/ Cyber Monday</span></a></li>
+            <li><a href="https://tobecoupon.com">Homepage </a><span>/ Cyber Monday</span></li>
             <!--<li>FAQ</li>-->
           </ul>
 
