--- a/stores-aliexpress.html
+++ b/stores-aliexpress.html
@@ -203,7 +203,7 @@
             <div class="catalog-top">
                 <ul class="breadcrumbs">
                     <li><a href="https://tobecoupon.com">Homepage</a></li>
-                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Stores <span>/ AliExpress</span></a></li>
+                    <li><a href="https://tobecoupon.com/catalog"><span>/ </span>Stores </a><span>/ AliExpress</span></li>
                 </ul>
             </div>
             <h1 class="content-title section-title-mob shop-title">AliExpress Promotional Codes September 2023</h1>
@@ -1334,6 +1334,7 @@
                                 <img class="brand-content__img" src="img/girl_couch.png" alt="AliExpress">
                                 <img class="brand-content__img-mob" src="img/brand-content/img-1-mob.png" alt="">
                             </div>
+                            <div class="brand-content__block-info">
                                                 <h3>Leverage the Power of AliExpress Promo Codes</h3>
                                                 <p>For those who adore the rush of shopping for a fantastic bargain,
                                                      AliExpress is a veritable paradise. AliExpress is the go-to platform
@@ -1350,9 +1351,7 @@
                                                             Imagine snagging that dream item at an already amazing
                                                              price, and then, applying a promo code takes another
                                                               chunk off the total – it's an exhilarating feeling!</p>
-
-                                                              
-                                                              
+                             </div>                                                                            
                     </div>  
 
                 <div class="faq-block">
