--- a/stores.html
+++ b/stores.html
@@ -202,7 +202,7 @@
         <div class="wrapper">
             <div class="catalog-top">
                 <ul class="breadcrumbs">
-                    <li><a href="https://tobecoupon.com">Homepage <span>/ Store</span></a></li>
+                    <li><a href="https://tobecoupon.com">Homepage </a> <span>/ Store</span></li>
                                     </ul>
                 <h1 class="page-title">Store</h1>
                 <div class="catalog-select">
